# xmedius-mailrelayserver

./: LICENSE  README.md  pyproject.toml  setup.py
xmediusmailrelayserver/: __init__.py  config.yml  console.py  create_service.py  emailsender.py  forwarddict.py  relayhandler.py  server.py  servicehelpers.py
